Call updateHistory() when switching to browse tab.  Fix popups on query grid.  Make sure footer appears behind popups when no results are loaded.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@27417 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/CryptoDB.css
+++ b/Site/htdocs/assets/css/CryptoDB.css
@@ -853,6 +853,7 @@ a.heading:hover + a.detail_link, .detail_link:hover {
    padding: 9px;
    line-height: 1.2em;
    clear: both;
+   z-index: -1;
 }
 	#footer img{
    margin-left: 24px;
